<resources>
    <string name="app_name">IncomeExpenses</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_edit">Редактировать</string>
    <string name="sign_in">Войти</string>
    <string name="sign_out">Выйти</string>
    <string name="link_to_sheet">Ссылка на таблицу</string>
    <string name="get_data">Получить данные</string>
    <string name="to_settings">Добавить ссылку на документ</string>
    <string name="input_data">Ввести значение</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="edit_question">Редактировать?</string>
    <string name="categories">Категория</string>
    <string name="sum_data"><![CDATA[Было:<b>%s\u00A0₽</b>,<br>Добавлено:<b>%s\u00A0₽</b>,<br>Сумма:<b>%s\u00A0₽</b>]]></string>
    <string name="edit_question_desc"><![CDATA[Редактировать сумму категории <b>%s</b> за месяц: <b>%s</b>?]]></string>
    <string-array name="monthes">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

    <string-array name="sorts">
        <item>По названию</item>
        <item>По уменьшению суммы</item>
        <item>По увеличению суммы</item>
        <item>Итоги вверху</item>
        <item>Итоги вверху уменьшение суммы</item>
    </string-array>

    <!--Preferences-->
    <string name="preference_key_user_name">pref_key_user_name</string>
    <string name="preference_key_user_email">pref_key_user_email</string>
    <string name="preference_key_doc_link">pref_key_doc_link</string>
    <string name="preference_header_main">Настройки файла</string>
    <string name="preference_header_other">Остальные настройки</string>
    <string name="preference_title_doc_link">Ссылка на документ</string>
    <string name="preference_title_doc_link_summary">Ссылка на документ или id документа</string>
    <string name="income">Доходы</string>
    <string name="outcome">Расходы</string>
    <string name="balance">Остаток</string>
    <string name="logout">Выйти из аккаунта?</string>
    <string name="sort_by">Сортировать</string>
    <string name="month">Месяц</string>
    <string name="sum">Сумма</string>
    <string name="pref_key_save_sort">PREF_KEY_SAVE_SORT</string>
    <string name="pref_key_sort_position">PREF_KEY_SORT_POSITION</string>
    <string name="save_sort">Сохранять сортировку</string>
    <string name="save_sort_desc">Сортировка будет сохранена при изменении</string>
    <string name="add">Добавить</string>
</resources>